--- a/style.css
+++ b/style.css
@@ -1,28 +1,85 @@
 html, body {
     width: 100%;
     height:100%;
-  }
+}
   
-  body {
+body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(-45deg, #72c1f6, #f49aee, #a66cf2, #76f5ab);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-  }
-  
-  @keyframes gradient {
-      0% {
-          background-position: 0% 50%;
-      }
-      50% {
-          background-position: 100% 50%;
-      }
-      100% {
-          background-position: 0% 50%;
-      }
-  }
-
-h1 {
-    color: green;
+    animation: gradient 5s ease infinite;
 }
 
+.container {
+    align-items: center;
+
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+
+h1 {
+    color: black;
+    font-size: 80px;
+    text-align: center;
+}
+
+h2 {
+    color: black;
+    font-size: 40px;
+    margin: px;
+}
+
+p {
+    font-size: 30px;
+    text-align: center;
+}
+
+.text-box1 {
+    padding: 30px;
+    margin: 270px 0px 270px 0px;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+.question {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px auto;
+    padding: 20px;
+}
+
+label {
+    display: flex;
+    align-items: center;
+    /* flex-direction: row; */
+    padding: 30px;
+    margin: 10px;
+    /* border: 2px solid #ccc; */
+    background-color: #fff;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+input[type="radio"]:checked + label {
+    background-color: #000000;
+    color: #FFFFFF;
+    border-color: #000000;
+}
+
+label:hover {
+    background-color: #9B87FE;
+}
